# portzero

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  TESTING.md  portzero.example.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-cli.yml  release-desktop.yml
apps/desktop/: index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/scripts/: screenshots.sh
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  daemon_bridge.rs  lib.rs  main.rs  state.rs  tray.rs
apps/desktop/src/api/: client.ts  listenWsEvent.ts  useDeepLink.ts  useWebSocket.ts
apps/desktop/src/components/: AppCard.tsx  DiffViewer.tsx  FilterBar.tsx  Layout.tsx  LiveRequestFeed.tsx  LogViewer.tsx  MockEditor.tsx  NetworkSimPanel.tsx  ReplayButton.tsx  RequestRow.tsx  SchemaViewer.tsx  StatusBadge.tsx  TunnelStatus.tsx
apps/desktop/src/lib/: env.ts  filters.ts  formatters.ts  types.ts
apps/desktop/src/pages/: AppDetail.tsx  Mocks.tsx  Overview.tsx  RequestDetail.tsx  Settings.tsx  Traffic.tsx
apps/web/: package.json  pnpm-lock.yaml  tsconfig.json
apps/web/public/: install.sh
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/blog/: layout.tsx  page.tsx
apps/web/src/app/blog/[slug]/: page.tsx
apps/web/src/app/blog/posts/: introducing-portzero.tsx
apps/web/src/app/docs/: layout.tsx  page.tsx
apps/web/src/app/docs/architecture/: page.tsx
apps/web/src/app/docs/cli-reference/: page.tsx
apps/web/src/app/docs/configuration/: page.tsx
apps/web/src/app/docs/desktop-app/: page.tsx
apps/web/src/app/docs/features/: page.tsx
apps/web/src/app/docs/getting-started/: page.tsx
apps/web/src/components/: blog-post-json-ld.tsx  code-block.tsx  mermaid.tsx  sidebar.tsx
apps/web/src/lib/: blog.ts
crates/portzero-api/: Cargo.toml  build.rs
crates/portzero-api/src/: lib.rs  server.rs  state.rs  static_files.rs  ws.rs
crates/portzero-api/src/routes/: apps.rs  certs.rs  mocks.rs  mod.rs  network.rs  requests.rs  schema.rs  status.rs  tunnel.rs
crates/portzero-api/tests/: api_tests.rs
crates/portzero-cli/: Cargo.toml
crates/portzero-cli/src/: daemon.rs  main.rs
crates/portzero-cli/src/commands/: auth.rs  list.rs  logs.rs  mock.rs  mod.rs  run.rs  share.rs  throttle.rs  trust.rs  up.rs
crates/portzero-core/: Cargo.toml
crates/portzero-core/src/: certs.rs  config.rs  control.rs  credentials.rs  lib.rs  log_store.rs  mock_engine.rs  network_sim.rs  process_manager.rs  proxy.rs  recorder.rs  router.rs  schema_inference.rs  store.rs  tunnel.rs  types.rs  ws.rs
crates/portzero-core/tests/: control_socket_tests.rs
crates/portzero-dashboard/: tauri.conf.json
crates/portzero-mcp/: Cargo.toml
crates/portzero-mcp/src/: lib.rs  tools.rs
dashboard-dist/: index.html
dashboard-dist/assets/: event-GkjTm6DH.js  index-AnHemtdh.js  index-BFq_ZMXk.css  index-QUHh19lr.js
